# Asynchronous-Assistant

./: .gitignore  README.md  broadcaster.py  categorizer.py  classes.py  debug.py  init.py  input.py  listener.py  main.py  pyproject.toml  settings.py  stored_embeddings.npy
RefractoringIdeas/: ImprovedCategorisation.md  Music.md  SubcategorizationProblem.md
json-data/: functions.json
modules/: music.py  search.py  timer.py
modules/music/: music.py
tests/: test_broadcaster.py  test_categorizer.py  test_init.py  test_input.py  test_music.py  test_worker_thread.py
