[project]
name = "personal-assitant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "optimum>=2.1.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
